project-app/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dwk-project-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dwk-project-app
  template:
    metadata:
      labels:
        app: dwk-project-app
    spec:
      containers:
      - name: dwk-project-app
        image: smuliii/dwk-project-app:latest
