project-app/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dwk-project-app-svc
spec:
  type: ClusterIP
  selector:
    app: dwk-project-app
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 8000
